--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,31 @@
 .callout {
-	
+    max-width: 600px;
+    margin: 10px;
+    border: 2px solid black;
+    background-color: blue;
+    color: white;
 }
 
 .callout img {
-	
+    float: right;
+    margin: 10px;
+    border: 2px solid beige;
+    padding: 3px;
+    background-color: black;
+    width: 100px;
+    height: auto;
 }
 
 blockquote {
-	
+    margin: 10;
 }
 
 cite {
-	
+    display: block;
+    border-top: 1px dotted white;
+    padding-top: 1px;
+    margin-top: 10px;
+    text-align: right;
+    font-size: larger;
+
 }
