--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,10 +1,7 @@
 :root {
-    --primary-color: #000;
-    --secondary-color: #fff;
-    --accent1-color: Black;
-    --accent2-color: Black;
-    --heading-font: "Times New Roman", "Arial Black", serif;
-    --body-font: "Times New Roman", "Georgia", Arial;
+    --primary-color: forestgreen;
+    --secondary-color: #f4a261 --accent1-color: #264653 --accent2-color: #e9c46a --heading-font: "Times New Roman", "Georgia", serif;
+    --body-font: Arial, Helvetica, sans-serif;
 }
 
 * {
@@ -59,7 +56,19 @@ h1 {
     padding: 16px;
     text-align: center;
     opacity: 0.7;
-    background-color: #fff;
+    background-color: rgba(25, 55, 95, 0.85);
+    color: white;
+}
+
+.hero article {
+    position: absolute;
+    width: 100%;
+    height: 170px;
+    margin-left: 0;
+    bottom: 0px;
+    background: #cbd7e1;
+    color: black;
+
 }
 
 .hero article img {
@@ -69,18 +78,8 @@ h1 {
     clear: right;
     border: 2px solid #000;
     block-size: 150px;
-    box-shadow: 3px 2px 1px 1px;
+    box-shadow: 2px;
     margin-left: 30px;
-}
-
-.hero article {
-    width: 100%;
-    height: 170px;
-    margin-top: 0;
-    margin-left: 0;
-    margin-bottom: 10px;
-    background-color: lightyellow;
-    text-align: justify;
 }
 
 h2 {
