--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -33,6 +33,7 @@ section,
 article {
     margin: 16px;
     padding: 8px;
+    color: var(--secondary-color);
 }
 
 .socialmedia a {
@@ -85,7 +86,7 @@ h1 {
 h2 {
     text-align: center;
     background-color: blue;
-    color: var(--secondary-color);
+    color: black;
 }
 
 footer img {
