--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,9 @@
 :root {
     --primary-color: forestgreen;
-    --secondary-color: #f4a261 --accent1-color: #264653 --accent2-color: #e9c46a --heading-font: "Times New Roman", "Georgia", serif;
+    --secondary-color: #f4a261;
+    --accent1-color: #264653;
+    --accent2-color: #e9c46a;
+    --heading-font: "Times New Roman", "Georgia", serif;
     --body-font: Arial, Helvetica, sans-serif;
 }
 
@@ -86,7 +89,7 @@ h1 {
 h2 {
     text-align: center;
     background-color: blue;
-    color: black;
+    color: white;
 }
 
 footer img {
