--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -82,7 +82,7 @@ h1 {
     clear: right;
     border: 2px solid #000;
     block-size: 150px;
-    box-shadow: 2px;
+    box-shadow: 2px 2px 2px 2px;
     margin-left: 30px;
 }
 
