--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -91,7 +91,7 @@ h1 {
     padding: 16px;
     text-align: center;
     opacity: 0.7;
-    background-color: rgba(25, 55, 95, 0.85);
+    background-color: var(--secondary-color);
     color: white;
 }
 
@@ -165,7 +165,7 @@ figure img {
 figcaption {
     font-size: 0.9rem;
     margin-top: 5px;
-    color: var(--accent1-color);
+    color: var(--accent2-color);
 }
 
 footer {
