--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: forestgreen;
+    --primary-color: #1c731c;
     --secondary-color: #f4a261;
     --accent1-color: #264653;
     --accent2-color: #e9c46a;
@@ -91,7 +91,7 @@ h1 {
     padding: 16px;
     text-align: center;
     opacity: 0.7;
-    background-color: var(--secondary-color);
+    background-color: var(--accent1-color);
     color: white;
 }
 
@@ -165,7 +165,7 @@ figure img {
 figcaption {
     font-size: 0.9rem;
     margin-top: 5px;
-    color: var(--accent2-color);
+    color: var(--accent1-color);
 }
 
 footer {
