--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -221,6 +221,7 @@ form fieldset {
     border-radius: 10px;
     padding: 20px;
     background-color: #f9f9f9;
+    margin-top: 10px;
 }
 
 /* form legend {
