--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -195,7 +195,7 @@ footer {
     align-items: start;
 }
 
-.company-info {
+.company-header h1 {
     text-align: center;
     padding: 20px;
 }
@@ -210,32 +210,37 @@ footer {
 
 .map iframe {
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     border: none;
     margin: 0 auto;
     display: block;
 }
-
-form fieldset {
-    border: 1px solid var(--primary-color);
-    border-radius: 10px;
-    padding: 20px;
-    background-color: #f9f9f9;
-    margin-top: 10px;
-}
-
-/* form legend {
-    color: var(--primary-color);
-    font-family: var(--heading-font);
-    font-size: 1.5rem;
-    padding: 0 10px;
-} */
 
 form label {
     display: block;
     margin-top: 15px;
     font-weight: bold;
     color: var(--accent1-color);
+}
+
+.form-row {
+    display: flex;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.form-row label {
+    width: 60px;
+    margin-top: 0;
+    margin-right: 20px;
+    flex-shrink: 0;
+    color: var(--accent1-color);
+    font-weight: bold;
+}
+
+.form-row input {
+    flex-grow: 1;
+    margin-top: 0;
 }
 
 form input[type="text"],
